--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,16 +3,15 @@
 		<div class="card-block">
 			<div class="row">
 				<div class="col-md-2">
-					<%= gravatar_helper comment.user %>
+					<%= image_tag "defaultuser.png", size: "20x20", alt:"default image" %>
 				</div>
 
 				<div class="col-md-10">
 					<div>
-						<%= comment.content %>
+						<%= @comment %>
 					</div>
 
 					<div class="comment-attribution">
-						Comment posted by <%= comment.user.first_name %>  <%= distance_of_time_in_words(comment.created_at, Time.now  ) %> ago
 					</div>
 				</div>
 			</div>
