--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -8,9 +8,10 @@
     
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    <%= favicon_link_tag 'favicons/favicon.ico' %>
-    <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag 'favicons/portfavicon.ico' %>
+    <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track' => true %>
+    <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.8.0.min.js"></script>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <meta name="Keywords" content="<%= @seo_keywords %>" />
   </head>
 
@@ -31,7 +32,10 @@
       </div> 
     </div>
     <div>
-        
+    if logged_in?(:site_admin) || @blog.published?
+      @blog = Blog.includes(:comments).friendly.find(params[:id])
+      @comments = Comment.new
+      
       <%= render 'shared/blog_footer' %>
       
       <%= alerts %>
