--- a/app/views/pages/_packages.html.erb
+++ b/app/views/pages/_packages.html.erb
@@ -50,6 +50,6 @@
         </div>
     </div>
     <div class="card btn-block package-body consultation">
-        <p class="card-text">* Anything you want done will start with a consultation where we go over what it is you're looking and you're time constraints to determine a price. The prices list are to give a genral idea of my prices.</p>
+        <p class="card-text">* Anything requested will start with a consultation where we go over what it is you're looking for, and your time constraints, to determine a price. The prices listed are to give a general idea of my prices. Before I start work on any major project, a deposit will be requested.</p>
     </div>
 </div>    
