--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Welcome to my website!</h1>
+  <h1 class="cover-heading">Welcome to Zatisfy!</h1>
+  <h2 class="subheading-home">The working portfolio for freelance Web Application Developer, Zabrina Larson </h2>
   <p class="lead">Please look around and view the many aspects shown here in my portfolio alone. I've worked in customer service for years and the part of that that I will always carry with me is the ability to communicate and anticipate the needs of my client. If you need a website built for your buisness that fits your aspirations for an online presence and that fits your budget, lets get in contact and see what we can do for you. </p>
   <p class="lead">
     <%= link_to "About Me", about_path, class:"btn btn-lg coverbtn" %>
