--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar blog-masthead">
     <div class="container">
         <nav class="nav navbar-dark">
-        	<%= link_to 'Zabrina Larson', root_path, class: 'navbar-brand' %>
+        	<%= link_to 'Zatisfy', root_path, class: 'navbar-brand' %>
             <%= nav_helper 'nav-link', 'span' %>
             <%= login_helper 'nav-link' %>
         </nav>
