--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
     <div class="sidebar-module sidebar-module-inset">
         <h4>About</h4>
-        <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>The blog posts here are an example of a blog you could have on your website. My blog posts are about upcomming projects and social media deals I have going on. Check them out and take advantage of the deals going on.</p>
     </div>
 
     <%= source_helper("alert alert-info blog-sidebar-source") %>
@@ -16,23 +16,11 @@
     <div class="sidebar-module sidebar-links sidebar-module-inset">
         <h4>Archives</h4> 
         <ol class="list-unstyled">
-            <li><a href="#">March 2014</a></li>
-            <li><a href="#">February 2014</a></li>
-            <li><a href="#">January 2014</a></li>
-            <li><a href="#">December 2013</a></li>
-            <li><a href="#">November 2013</a></li>
-            <li><a href="#">October 2013</a></li>
-            <li><a href="#">September 2013</a></li>
-            <li><a href="#">August 2013</a></li>
-            <li><a href="#">July 2013</a></li>
-            <li><a href="#">June 2013</a></li>
-            <li><a href="#">May 2013</a></li>
-            <li><a href="#">April 2013</a></li>
         </ol>
     </div>
 
     <div class="sidebar-module social-links sidebar-links sidebar-module-inset">
-        <h4>Elsewhere</h4>
+        <h4>Lets connect on Social  Media!</h4>
         <ol class="list-unstyled">
             <li><a href="#"><%= fa_icon "github" %></a></li>
             <li><a href="#"><%= fa_icon "instagram" %></a></li>
