--- a/app/views/shared/_portfolio_masthead.html.erb
+++ b/app/views/shared/_portfolio_masthead.html.erb
@@ -1,7 +1,7 @@
 <section class="jumbotron text-center"> 
   <div class="container">
-    <h1 class="jumbotron-heading">My Portfolio</h1>
-    <p class="lead text-custom">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+    <h1 class="jumbotron-heading">Portfolio</h1>
+    <p class="lead text-custom"> Below is a collection of websites built or in progress of being built. Feel free to check out my clients websites, it may help bring inspiration for features you may want in your own!</p>
     <p>
       <%= link_to 'Start your Website!', about_path, class: 'btn btn-custom' %>
       <%= link_to 'Check Out my Blog!', blogs_path, class: 'btn btn-custom' %>
