--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,5 +1,7 @@
 	<div class="col-sm-8 blog-main">
-		<h1>Topics</h1>
+		<div class="card blog-card">
+			<h1>Topics</h1>
   
-		<%= render @topics %>
+			<%= render @topics %>
+		</div>
 	</div> 
