--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,10 +1,11 @@
 <div class="col-sm-8 blog-main">
-	<h1><%= @topic.title %></h1>
+	<div class="card blog-card">
+		<h1><%= @topic.title %></h1>
 
-	<%= paginate @blogs %>
+		<%= paginate @blogs %>
   
-	<%= render @blogs %>
+		<%= render @blogs %>
   
-	<%= paginate @blogs %>
-
+		<%= paginate @blogs %>
+	</div>
 </div>
