--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -34,6 +34,6 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit "Submit", class: 'btn btn-primary' %>
+    <%= f.submit "Submit", class: 'btn btn-cus' %>
   </div>
 <% end %>
