--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,10 +1,10 @@
 <%  unless current_user.is_a? GuestUser %>
-	<%= form_for @comment, url: '#' do |f| %>
+	<%= form_for @comments, url:  '#' do |f| %>
 		<div class="form-group">
 			<%= f.label :content %>
 			<%= f.text_area :content, class:'form-control' %>
 		</div>
 
-		<%= f.submit 'Post Comment', class:'btn btn-success' %>
+		<%= f.submit 'Post Comment', class:'btn btn-cus' %>
 	<% end %>
 <% end %>
