--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,14 @@
     
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    <%= favicon_link_tag 'favicons/favicon.ico' %>
+    <%= favicon_link_tag 'favicons/portfavicon.ico' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="Keywords" content="<%= @seo_keywords %>" />
   </head>
 
   <body>
-    <div class="site-wrapper">
+    <div class="site-wrapper">                                                                                                                  
   
       <div class="site-wrapper-inner">
   
