--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -10,7 +10,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Oswald&display=swap" rel="stylesheet">
 
-    <%= favicon_link_tag 'favicons/favicon.ico' %>
+    <%= favicon_link_tag 'favicons/portfavicon.ico' %>
 
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
