--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="container d-flex justify-content-between">
-    <%= link_to 'Zabrina Larson', root_path, class: 'navbar-brand text-custom' %>
+    <%= link_to 'Zatisfy', root_path, class: 'navbar-brand text-custom' %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
