--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,7 +1,7 @@
 <div class="blog-header">
     <div class="container">
         <h1 class="blog-title text-custom">Blog About It</h1>
-        <p class="lead blog-description text-custom">Look around and see the  projects currently in production. Comming Soon to this area is commmenting for the articles that load in real time!</p>
+        <p class="lead blog-description text-custom">Look around and see the  projects currently in production. Comming Soon to this area is commenting for the articles that load in real time!</p>
         <span>
         	<%= link_to 'New Blog', new_blog_path, class:"btn btn-sm blog-btn" if logged_in?(:site_admin) %>	
         </span>
