--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
     <div class="sidebar-module sidebar-module-inset">
         <h4>About</h4>
-        <p>The blog posts here are an example of a blog you could have on your website. My blog posts are about upcomming projects and social media deals I have going on. Check them out and take advantage of the deals going on.</p>
+        <p>The blog posts here are an example of a blog you could have on your website. My blog posts are about upcomming projects and social media deals I have going on. Check them out and take advantage of some awesome deals!</p>
     </div>
 
     <%= source_helper("alert alert-info blog-sidebar-source") %>
